# campamento-api

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20260622061309_create_initial_schema.sql  20260627214008_fix_numeric_to_float.sql
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  telegram.rs  worker.rs
src/models/: contribution.rs  event.rs  metrics.rs  mod.rs  replacement.rs  schedule.rs  shift.rs  user.rs
src/routes/: auth.rs  contributions.rs  events.rs  health.rs  metrics.rs  mod.rs  replacements.rs  schedule.rs  shifts.rs  telegram.rs
